--- a/server/.env
+++ b/server/.env
@@ -29,3 +29,12 @@ MERCURE_JWT_SECRET=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJtZXJjdXJlIjp7InB1Ymxp
 ###> symfony/messenger ###
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 ###< symfony/messenger ###
+
+MERCURE_JWT_KEY=aVerySecretKey
+
+###> doctrine/doctrine-bundle ###
+# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# Configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL=mysql://root@127.0.0.1:3306/realtime
+###< doctrine/doctrine-bundle ###
